fix: firefox shadow & cleanup

--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -1,11 +1,4 @@
-############################
-#                          #
-# Picom Configuration File #
-#                          #
-############################
-
 # General Settings
-
 backend = "glx";
 glx-no-stencil = true;
 glx-copy-from-front = false;
@@ -46,6 +39,7 @@ shadow-offset-y = -20;
 shadow-opacity = 0.15;
 
 shadow-exclude = [
+  "class_g = 'firefox' && (window_type = 'popup_menu' || window_type = 'utility')",
 ];
 
 # Opacity
@@ -57,14 +51,18 @@ inactive-opacity-override = false;
 
 opacity-rule = [
     "100:class_g = 'Rofi'",
-    "100:class_g = 'Alacritty'",
+    "98:class_g = 'Alacritty'",
 ];
 
 inactive-dim = 0.1;
 
+blur-exclude = [
+  "class_g = 'firefox' && (window_type = 'popup_menu' || window_type = 'utility')",
+];
+
 blur-background = true;
 blur-background-exclude = [
-    "class_g = 'Firefox'",
+    "class_g = 'firefox'",
     "class_g = 'discord'",
     "class_g = 'qutebrowser'",
     "class_g = ''",
