--- a/ranger/.config/ranger/rc.conf
+++ b/ranger/.config/ranger/rc.conf
@@ -13,7 +13,7 @@ set vcs_aware false
 set vcs_backend_git enabled
 set vcs_msg_length 50
 set preview_images true
-set preview_images_method ueberzug
+set preview_images_method kitty
 set colorscheme default
 set preview_files true
 set preview_directories true
