--- a/gtk/.config/gtk-3.0/settings.ini
+++ b/gtk/.config/gtk-3.0/settings.ini
@@ -1,22 +1,22 @@
 [Settings]
-gtk-application-prefer-dark-theme=true
-gtk-button-images=true
-gtk-cursor-theme-name=breeze_cursors
-gtk-cursor-theme-size=24
-gtk-decoration-layout=icon:minimize,maximize,close
-gtk-enable-animations=true
-gtk-enable-event-sounds=1
-gtk-enable-input-feedback-sounds=1
-gtk-font-name=Noto Sans,  10
-gtk-icon-theme-name=breeze-dark
-gtk-menu-images=true
-gtk-modules=colorreload-gtk-module
-gtk-primary-button-warps-slider=false
 gtk-theme-name=Adwaita
-gtk-toolbar-icon-size=GTK_ICON_SIZE_LARGE_TOOLBAR
+gtk-icon-theme-name=Adwaita
+gtk-font-name=Segoe UI Semi-Light 11
+gtk-cursor-theme-name=Adwaita
+gtk-cursor-theme-size=22
 gtk-toolbar-style=3
+gtk-toolbar-icon-size=GTK_ICON_SIZE_LARGE_TOOLBAR
+gtk-button-images=0
+gtk-menu-images=0
+gtk-enable-event-sounds=0
+gtk-enable-input-feedback-sounds=0
 gtk-xft-antialias=1
-gtk-xft-dpi=98304
 gtk-xft-hinting=1
 gtk-xft-hintstyle=hintslight
 gtk-xft-rgba=rgb
+gtk-application-prefer-dark-theme=0
+gtk-decoration-layout=icon:minimize,maximize,close
+gtk-enable-animations=true
+gtk-modules=colorreload-gtk-module
+gtk-primary-button-warps-slider=false
+gtk-xft-dpi=98304
