--- a/gtk/.config/gtk-3.0/settings.ini
+++ b/gtk/.config/gtk-3.0/settings.ini
@@ -1,7 +1,7 @@
 [Settings]
 gtk-theme-name=Adwaita
 gtk-icon-theme-name=Adwaita
-gtk-font-name=Segoe UI Semi-Light 11
+gtk-font-name=SF Pro Text 10
 gtk-cursor-theme-name=Adwaita
 gtk-cursor-theme-size=22
 gtk-toolbar-style=3
@@ -15,7 +15,7 @@ gtk-xft-hinting=1
 gtk-xft-hintstyle=hintslight
 gtk-xft-rgba=rgb
 gtk-application-prefer-dark-theme=0
-gtk-decoration-layout=icon:minimize,maximize,close
+gtk-decoration-layout=none
 gtk-enable-animations=true
 gtk-modules=colorreload-gtk-module
 gtk-primary-button-warps-slider=false
