--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -46,7 +46,7 @@ $menu = rofi -show drun
 # exec-once = $terminal
 # exec-once = nm-applet &
 exec-once = waybar & hyprpaper
-
+exec-once = gammastep -P -O 5500
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -66,8 +66,8 @@ env = HYPRCURSOR_SIZE,24
 
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general { 
-    gaps_in = 8
-    gaps_out = 16
+    gaps_in = 5
+    gaps_out = 10
 
     border_size = 0
 
@@ -222,11 +222,7 @@ bind = $mainMod SHIFT, 8, movetoworkspace, 8
 bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
-# Example special workspace (scratchpad)
-bind = $mainMod, S, togglespecialworkspace, magic
-bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 
-# Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
 bind = $mainMod, mouse_up, workspace, e-1
 
@@ -246,6 +242,9 @@ bindel = ,XF86MonBrightnessDown, exec, brightnessctl s 5%-
 bindel = ,XF86KbdBrightnessUp, exec, brightnessctl --device='smc::kbd_backlight' set 5%+
 bindel = ,XF86KbdBrightnessDown, exec, brightnessctl --device='smc::kbd_backlight' set 5%-
 
+# Screenshot a region
+bind = $mainMod SHIFT, S, exec, hyprshot -m region
+
 
 ##############################
 ### WINDOWS AND WORKSPACES ###
@@ -261,3 +260,5 @@ bindel = ,XF86KbdBrightnessDown, exec, brightnessctl --device='smc::kbd_backligh
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
+
+windowrule = float, rofi
