--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -22,7 +22,7 @@
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor = eDP-1, 2560x1600, 0x0, 1.6    # name, resolution, position, scale
+monitor = eDP-1, 5120x2160, 0x0, 1.6    # name, resolution, position, scale
 
 ###################
 ### MY PROGRAMS ###
@@ -86,23 +86,17 @@ general {
 
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
-    rounding = 3
+    rounding = 0
 
     # Change transparency of focused and unfocused windows
     active_opacity = 1.0
     inactive_opacity = 1.0
-
-    drop_shadow = true
-    shadow_range = 0
-    shadow_render_power = 10
-    col.shadow = rgba(1a1a1aee)
 
     # https://wiki.hyprland.org/Configuring/Variables/#blur
     blur {
         enabled = true
         size = 3
         passes = 1
-        
         vibrancy = 0.1696
     }
 }
@@ -136,8 +130,8 @@ master {
 
 # https://wiki.hyprland.org/Configuring/Variables/#misc
 misc { 
-    force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
-    disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
+    force_default_wallpaper = 0 # Set to 0 or 1 to disable the anime mascot wallpapers
+    disable_hyprland_logo = true # If true disables the random hyprland logo / anime girl background. :(
 }
 
 
@@ -174,6 +168,13 @@ device {
     sensitivity = -0.5
 }
 
+# unscale XWayland
+xwayland {
+  force_zero_scaling = true
+}
+
+env = GDK_SCALE,1.5
+env = XCURSOR_SIZE,24
 
 ###################
 ### KEYBINDINGS ###
@@ -185,8 +186,8 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, Return,        exec, $terminal
 bind = $mainMod, Q,             killactive,
-bind = $mainMod, E,             exec, $fileManager
-bind = $mainMod, V,             togglefloating,
+bind = $mainMod, R,             exec, $fileManager
+bind = $mainMod, S,             togglefloating,
 bind = $mainMod, Space,         exec, $menu
 bind = $mainMod, P,             pseudo,
 bind = $mainMod, J,             togglesplit,
@@ -260,5 +261,3 @@ bind = $mainMod SHIFT, S, exec, hyprshot -m region
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
-
-windowrule = float, rofi
