--- a/hypr/.config/hypr/hyprlock.conf
+++ b/hypr/.config/hypr/hyprlock.conf
@@ -4,26 +4,35 @@ general {
 
 background {
     monitor =
-    # path = screenshot   # screenshot of your desktop
-    # path = home/akarez//Pictures/Wallpapers/solarized-02.jpg
+    path = $WALLPAPER
     color = rgb(0, 30, 38)
     blur_size = 5
     blur_passes = 0 # 0 disables blurring
     noise = 0.0117
     contrast = 1.3000
-    brightness = 0.8000
+    brightness = 0.1000
     vibrancy = 0.2100
     vibrancy_darkness = 0.0
 }
 
 label {
     monitor =
-    text = cmd[update:1000] echo "<b><big> $(date +"%l:%M %p") </big></b>"
+    text = cmd[update:1000] echo "<big>$(date +"%l:%M %p")</big>"
     color = $color15
-    font_size = 64
-    font_family = SF Pro Display
+    font_size = 128
+    font_family = Segoe UI
+    position = 0, -10%
+    halign = center
+    valign = top
+}
 
-    position = 0, 0
-    halign = right
-    valign = bottom
+label {
+    monitor =
+    text = cmd[update:1000] echo "$(date +"%A, %B %d")"
+    color = $color15
+    font_size = 32
+    font_family = Segoe UI
+    position = 0, -22%
+    halign = center
+    valign = top
 }
