--- a/gtk/.config/gtk-3.0/settings.ini
+++ b/gtk/.config/gtk-3.0/settings.ini
@@ -1,7 +1,7 @@
 [Settings]
 gtk-theme-name=Adwaita
 gtk-icon-theme-name=Adwaita
-gtk-font-name=SF Pro Text 10
+gtk-font-name=Segoe UI 10
 gtk-cursor-theme-name=Adwaita
 gtk-cursor-theme-size=22
 gtk-toolbar-style=3
