--- a/hypr/.config/hypr/hyprpaper.conf
+++ b/hypr/.config/hypr/hyprpaper.conf
@@ -1,3 +1,3 @@
-preload = /home/akarez/Pictures/Wallpapers/solarized-02.jpg
+preload = $WALLPAPER
 
-wallpaper = , /home/akarez/Pictures/Wallpapers/solarized-02.jpg
+wallpaper = , $WALLPAPER
