--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -450,7 +450,7 @@ detect_urls yes
 #: value to/from always will only affect text subsequently received by
 #: kitty.
 
-copy_on_select no
+copy_on_select yes
 
 #: Copy to clipboard or a private buffer on select. With this set to
 #: clipboard, selecting text with the mouse will cause the text to be
@@ -621,7 +621,11 @@ copy_on_select no
 
 #: Paste from the primary selection
 
-# mouse_map middle release ungrabbed paste_from_selection
+mouse_map right release ungrabbed paste_from_selection
+
+#: Copy and Paste with right click
+mouse_map right press paste_from_clipboard
+mouse_map left press ungrabbed,dragging=selection
 
 #: Start selecting text
 
@@ -989,7 +993,7 @@ hide_window_decorations yes
 #: insensitive, from the set 0-9A-Z\-=[];',./\\`. Specify your
 #: preference as a string of characters.
 
-confirm_os_window_close -1
+confirm_os_window_close 0
 
 #: Ask for confirmation when closing an OS window or a tab with at
 #: least this number of kitty windows in it by window manager (e.g.
@@ -1172,7 +1176,7 @@ confirm_os_window_close -1
 #: }}}
 
 #: Color scheme {{{
-include ./Solarized_Dark.conf
+include ./theme.conf
 
 #: The foreground and background colors.
 
@@ -1558,7 +1562,7 @@ background_opacity 0.98
 #: config is not supported. Note that if kitty is invoked with command
 #: line arguments specifying a command to run, this option is ignored.
 
-clipboard_control write-clipboard write-primary read-clipboard-ask read-primary-ask
+clipboard_control write-clipboard write-primary no-append
 
 #: Allow programs running in kitty to read and write from the
 #: clipboard. You can control exactly which actions are allowed. The
