--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -22,7 +22,7 @@
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor = eDP-1, 5120x2160, 0x0, 1.6    # name, resolution, position, scale
+monitor = DP-4, 5120x2160, 0x0, 1.6    # name, resolution, position, scale
 
 ###################
 ### MY PROGRAMS ###
@@ -48,6 +48,7 @@ $menu = rofi -show drun
 exec-once = waybar & hyprpaper
 exec-once = gammastep -P -O 5500
 
+
 #############################
 ### ENVIRONMENT VARIABLES ###
 #############################
@@ -56,7 +57,8 @@ exec-once = gammastep -P -O 5500
 
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
-
+env = LIBVA_DRIVER_NAME,nvidia
+env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 
 #####################
 ### LOOK AND FEEL ###
@@ -98,6 +100,15 @@ decoration {
         size = 3
         passes = 1
         vibrancy = 0.1696
+    }
+    shadow {
+        enabled = true
+        range = 40
+        render_power = 4
+        sharp = false
+        color = 0x30000000
+        offset = 0 0
+        scale = 1.0
     }
 }
 
@@ -254,10 +265,6 @@ bind = $mainMod SHIFT, S, exec, hyprshot -m region
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 # See https://wiki.hyprland.org/Configuring/Workspace-Rules/ for workspace rules
 
-# Example windowrule v1
-# windowrule = float, ^(kitty)$
-
-# Example windowrule v2
-# windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
-
-windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
+windowrulev2 = workspace 5, class:^(discord)$
+windowrulev2 = workspace 6, class:^(Spotify)$
+windowrulev2 = workspace 7, class:^(teams-for-linux)$
