--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -44,8 +44,8 @@ set -g -a terminal-overrides ',*:Ss=\E[%p1%d q:Se=\E[2 q'
 set -g escape-time 0             
 set -g renumber-windows on       
 set -g set-clipboard on       
-
-set-option -g status-position top
+set -g mouse on
+set-option -g status-position bottom
 
 set-window-option -g pane-base-index 1
 set-window-option -g mode-keys vi
