--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -22,8 +22,19 @@
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor = DP-4, 5120x2160, 0x0, 1.6    # name, resolution, position, scale
+monitor = DP-1, 1920x1080, 0x0, 1    # name, resolution, position, scale
+monitor = DP-2, 1920x1080, 1920x0, 1
 
+workspace = 1,monitor:DP-1
+workspace = 2,monitor:DP-1
+workspace = 3,monitor:DP-1
+workspace = 4,monitor:DP-1
+workspace = 5,monitor:DP-1
+workspace = 6,monitor:DP-1
+workspace = 7,monitor:DP-1
+workspace = 8,monitor:DP-1
+
+workspace = 9,monitor:DP-2
 ###################
 ### MY PROGRAMS ###
 ###################
@@ -32,7 +43,7 @@ monitor = DP-4, 5120x2160, 0x0, 1.6    # name, resolution, position, scale
 
 # Set programs that you use
 $terminal = kitty
-$fileManager = ranger
+$fileManager = yazi
 $menu = rofi -show drun
 
 
@@ -46,7 +57,7 @@ $menu = rofi -show drun
 # exec-once = $terminal
 # exec-once = nm-applet &
 exec-once = waybar & hyprpaper
-exec-once = gammastep -P -O 5500
+exec-once = gammastep -P -O 6000
 
 
 #############################
@@ -167,11 +178,6 @@ input {
     }
 }
 
-# https://wiki.hyprland.org/Configuring/Variables/#gestures
-gestures {
-    workspace_swipe = true
-}
-
 # Example per-device config
 # See https://wiki.hyprland.org/Configuring/Keywords/#per-device-input-configs for more
 device {
@@ -205,10 +211,10 @@ bind = $mainMod, J,             togglesplit,
 bind = $mainMod, ESCAPE,        exec, hyprlock
 
 # Move focus with mainMod + arrow keys
-bind = $mainMod, left, movefocus, l
-bind = $mainMod, right, movefocus, r
-bind = $mainMod, up, movefocus, u
-bind = $mainMod, down, movefocus, d
+bind = $mainMod, h, movefocus, l
+bind = $mainMod, l, movefocus, r
+bind = $mainMod, k, movefocus, u
+bind = $mainMod, j, movefocus, d
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
@@ -265,6 +271,27 @@ bind = $mainMod SHIFT, S, exec, hyprshot -m region
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 # See https://wiki.hyprland.org/Configuring/Workspace-Rules/ for workspace rules
 
+# Default App Workspaces
 windowrulev2 = workspace 5, class:^(discord)$
 windowrulev2 = workspace 6, class:^(Spotify)$
 windowrulev2 = workspace 7, class:^(teams-for-linux)$
+
+# Default App Size and Mode
+windowrule = float, size 1200 700, class:org.kde.dolphin
+windowrule = float, size 1200 700, class:yazi
+windowrule = pseudo, size 1600 900, class:discord
+windowrule = pseudo, size 1600 900, class:teams-for-linux
+windowrule = pseudo, size 1600 900, class:Spotify
+
+# Make Rofi appear on top of Waybar -- DOES NOT WORK
+layerrule = order 5, class:waybar
+layerrule = order 10, class:rofi
+
+
+windowrulev2 = float,title:^(scratchpad-term)$
+windowrulev2 = size 800 500,title:^(scratchpad-term)$
+windowrulev2 = center,title:^(scratchpad-term)$
+
+
+
+bind = SUPER_SHIFT,Return,exec,kitty --class scratchpad-term --title scratchpad-term
